fix: Update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -68,7 +68,7 @@ dist
 
 # Gatsby files
 .cache/
-public
+# Note: public folder is needed for Next.js static assets, so we don't ignore it
 
 # Storybook build outputs
 .out
