Update background dots opacity and add frontend dependencies

--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "install:frontend": "cd frontend && npm install",
     "install:all": "npm run install:backend && npm run install:frontend"
   },
+  "dependencies": {
+    "next": "14.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
   "keywords": [
     "credit-scoring",
     "alternative-credit",
