--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "next": "16.0.3",
+    "prop-types": "^15.8.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
