--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
   "description": "AltCred - Alternative Credit Scoring Platform",
   "private": true,
   "scripts": {
-    "dev": "cd frontend && npm run dev",
-    "dev:frontend": "cd frontend && npm run dev",
-    "dev:backend": "cd backend && npm run dev",
-    "start:backend": "cd backend && node server.js",
-    "build": "cd frontend && npm run build",
-    "start": "cd frontend && npm start",
     "install:backend": "cd backend && npm install",
     "install:frontend": "cd frontend && npm install",
-    "install:all": "npm run install:backend && npm run install:frontend"
+    "install:all": "npm run install:backend && npm run install:frontend",
+
+    "dev:frontend": "cd frontend && npm run dev",
+    "dev:backend": "cd backend && npm run dev",
+    "dev:all": "npm run dev:frontend && npm run dev:backend",    
   },
   "dependencies": {
     "next": "14.0.0",
